# xmlang

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: lib.xml  program.xml
src/: main.rs  util.rs
src/util/: libs.rs  parser.rs  structures.rs
src/util/libs/: iolib.rs  mathlib.rs  randlib.rs  stdlib.rs
